kube/poll-api-barnard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-api-barnard-deployment
  labels:
    app: poll-api-barnard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poll-api-barnard
  template:
    metadata:
      labels:
        app: poll-api-barnard
    spec:
      containers:
      - name: poll-api-barnard
        image: starcoin/starcoin_poll:sha-d9420ab
        ports:
        - containerPort: 8601
