kube/poll-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-api-deployment
  labels:
    app: poll-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poll-api
  template:
    metadata:
      labels:
        app: poll-api
    spec:
      containers:
      - name: poll-api
        image: starcoin/starcoin_poll:sha-521dd8c
        ports:
        - containerPort: 8600
