kube/poll-api-halley-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-api-halley-deployment
  labels:
    app: poll-api-halley
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poll-api-halley
  template:
    metadata:
      labels:
        app: poll-api-halley
    spec:
      containers:
      - name: poll-api-halley
        image: starcoin/starcoin_poll:sha-d9420ab
        ports:
        - containerPort: 8602
