kube/poll-api-proxima-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-api-proxima-deployment
  labels:
    app: poll-api-proxima
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poll-api-proxima
  template:
    metadata:
      labels:
        app: poll-api-proxima
    spec:
      containers:
      - name: poll-api-proxima
        image: starcoin/starcoin_poll:sha-521dd8c
        ports:
        - containerPort: 8603
