kube/service-poll-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-poll-api
  labels:
    app: service-poll-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-poll-api
  template:
    metadata:
      labels:
        app: service-poll-api
    spec:
      containers:
      - name: service-poll-api
        image: starcoin/starcoin_poll:sha-521dd8c
        ports:
        - containerPort: 8600
