kube/service-poll-api-halley.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: poll-api-halley
  name: poll-api-halley
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 8602
  selector:
    app: poll-api-halley
  type: LoadBalancer
status:
  loadBalancer: {}
