kube/service-poll-api-proxima.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: poll-api-proxima
  name: poll-api-proxima
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 8603
  selector:
    app: poll-api-proxima
  type: LoadBalancer
status:
  loadBalancer: {}
