kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "poll-api-ingress"
#  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: poll-api
spec:
  rules:
    - http:
        paths:
          - path: /v1/polls/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: "poll-api"
                port:
                  number: 80
          - path: /poll-api-doc/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: "poll-api"
                port:
                  number: 80
